--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=clothestore
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=bancoclothestore
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+server.port=8084
+
