criar novos ususarios

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=clothestore
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=bancoclothestore
+spring.datasource.url=jdbc:postgresql://localhost:5432/bancoclothestore
+spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 server.port=8084
